# game-of-life

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
assets/: config.json
doc/: developer.md
doc/sublicenses/: sdl20.md
include/: config.hpp  engine.hpp  state.hpp
src/: config.cpp  engine.cpp  game.cpp
